changed some links, added internship and final report section

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@ body,h1 {font-family: "Raleway", sans-serif}
       </div>
       <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/chatNodejs')"" class=" w3-button
         w3-theme-d1 w3-margin-bottom"><i class="fa fa-github"></i> &nbsp;Github</button>
-      <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-terminal"></i> <del>
-          &nbsp;Demo </del></button>
+      <button type="button" onclick="window.open('http://chat.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-terminal"></i>
+          &nbsp;Demo </button>
     </div>
 
     <div class="w3-container w3-card w3-white w3-round w3-margin Section3" style="display: 'none'"><br>
@@ -359,7 +359,34 @@ body,h1 {font-family: "Raleway", sans-serif}
       </div>
       <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/cvEditorFront')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
           class="fa fa-github"></i> &nbsp;Github</button>
-      <button type="button" onclick="window.open('http://www.stefworks.ml/angular/index.html')" class="w3-button w3-theme-d2 w3-margin-bottom"><i
+      <button type="button" onclick="window.open('http://makeyourcv.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i
+          class="fa fa-terminal"></i> &nbsp;Demo</button>
+    </div>
+
+    <div class="w3-container w3-card w3-white w3-round w3-margin Section3" style="display: 'none'"><br>
+      <img src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg" alt="Avatar" class="w3-left w3-circle w3-margin-right"
+        style="width:60px">
+      <span class="w3-right w3-opacity">Jun 2018</span>
+      <h4>Internship project</h4><br>
+      <hr class="w3-clear">
+      <p>In a multidisciplinary team of 2 software developers and 2 multimedia designers, we work in developing an AR solution for this local guided-tours company. 
+        Our goal is to "Bring Stories Alive" as well as to add a competitive advantage in the company's SoMe presence.
+      </p>
+      <p>Further on, in a team of three developers, we further refined the prototype, and developed an administration system for the app. 
+        The system together with a report of our process was handed as a final project at KEA and my colleagues and I got an excellent evaluation at the exam.
+      </p>
+      <div class="w3-row-padding" style="margin:0 -16px">
+        <div class="w3-half">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Lbq94Ef9qJY?start=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
+        <div class="w3-half">
+          <a frameborder="0" data-theme="light" data-layers="1,2,3,4" data-stack-embed="true" href="https://embed.stackshare.io/stacks/embed/8ad84b5f98988d769fc3c329cfe99b" /></a>
+          <script async src="https://cdn1.stackshare.io/javascripts/client-code.js" charset="utf-8"></script>
+          <!-- <img src="/w3images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom"> -->
+        </div>
+      </div>
+      <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/gps-tourist-app')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
+          class="fa fa-github"></i> &nbsp;Github</button>
+      <button type="button" onclick="window.open('http://ar.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i
           class="fa fa-terminal"></i> &nbsp;Demo</button>
     </div>
 
