changed a tech logo

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ body,h1 {font-family: "Raleway", sans-serif}
     </div>
 
     <div class="w3-container w3-card w3-white w3-round w3-margin Section3" style="display: 'none'"><br>
-      <img src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg" alt="Avatar" class="w3-left w3-circle w3-margin-right"
+      <img src="https://4.bp.blogspot.com/-qgCd0X6Q5jo/WS7l8KhIztI/AAAAAAAABHk/w6t5pFbWdeUUjVoPFTjkvpraw3PDPtijwCLcB/s1600/Unity_Logo.png" alt="Avatar" class="w3-left w3-circle w3-margin-right"
         style="width:60px">
       <span class="w3-right w3-opacity">Jun 2018</span>
       <h4>Internship project</h4><br>
