--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <title>StefWorks</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<title>StefWorks</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 
 
@@ -31,7 +31,7 @@
     width: 100%;
     height: 10px;
     border-radius: 5px;
-    background: #d3d3d3;
+    background: #d3d3d3fd;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -112,20 +112,17 @@ body,h1 {font-family: "Raleway", sans-serif}
 
 <body>
   <!-- Intro Page -->
-    
-    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-      <div class="w3-display-topleft w3-padding-large w3-xlarge">
-        STEFWORKS
-      </div>
-      <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-top">PORTFOLIO</h1>
-        <hr class="w3-border-grey" style="margin:auto;width:40%">
-        <p class="w3-large w3-center">Use the sliders, follow the color code, explore the profile</p>
-      </div>
-      <div class="w3-display-bottomleft w3-padding-large">
-        Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-      </div>
+
+  <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+    <div class="w3-display-topleft w3-padding-large w3-xlarge">
+      STEFWORKS
     </div>
+    <div class="w3-display-middle">
+      <h1 class="w3-jumbo w3-animate-top">PORTFOLIO</h1>
+      <hr class="w3-border-grey" style="margin:auto;width:40%">
+      <p class="w3-large w3-center">Use the sliders and explore the profile</p>
+    </div>
+  </div>
 
 
 
@@ -135,43 +132,67 @@ body,h1 {font-family: "Raleway", sans-serif}
     <!-- SECTION1 -->
     <div class="w3-container w3-red w3-cell-middle w3-cell w3-mobile">
 
-      <div class="w3-container w3-red Section1 w3-padding-16" style="display: 'none'">
+      <!--FIRST SLIDER, controls the content of the Section1 above -->
+      <div id="Demo1" class="slidecontainer w3-container w3-padding-16">
+        <input type="range" min="0" max="100" step="1" class="slider" id="myRange1" oninput="mySlider('Section1')">
+      </div>
+
+      <div class="w3-display-container w3-red Section1 w3-padding-16" style="display: 'none'">
         <div class="w3-card-4" style="overflow:hidden">
           <img src="homepage/kid.jpg" class="w3-round" style="max-width:100%" alt="">
+          <h2 class="w3-display-topleft w3-padding-32 w3-text-grey w3-container" style="text-shadow: 2px 2px white;">{age:<br> undefined, </h2>
+          <h2 class="w3-display-bottommiddle w3-padding-32 w3-text-grey w3-container" style="text-shadow: 2px 2px white;">tan:<br> 80pc} </h2>
         </div>
       </div>
 
-      <div class="w3-container w3-red Section1 w3-margin" style="display: 'none'">
+      <div class="w3-display-container w3-red Section1 w3-margin" style="display: 'none'">
         <div class="w3-card-4" style="overflow:hidden">
           <img src="homepage/volunteerPride.jpg" class="w3-round" style="max-width:100%" alt="">
+          <h2 class="w3-display-topmiddle w3-padding-32 w3-text-red w3-container" style="text-shadow: 2px 2px green;" >i love giving orders</h2>
+          <h2 class="w3-display-bottommiddle w3-padding-32 w3-text-green w3-container" style="text-shadow: 2px 2px red;">here, I am letting some Athens Pride volunteers know <br> the parade is not gonna wait for them</h2>
         </div>
       </div>
 
-      <div class="w3-container w3-red Section1 w3-padding-16" style="display: 'none'">
+      <div class="w3-display-container w3-red Section1 w3-padding-16" style="display: 'none'">
         <div class="w3-card-4" style="overflow:hidden">
           <img src="homepage/book.jpg" class="w3-round" style="max-width:100%" alt="">
+          <h5 class="w3-display-topright w3-padding-32 w3-text-grey w3-container">..my career as a model <br>   ended prematurely...</h5>
         </div>
+
       </div>
 
-      <div class="w3-container w3-red Section1 w3-margin" style="display: 'none'">
+      <div class="w3-display-container w3-red Section1 w3-margin" style="display: 'none'">
         <div class="w3-card-4" style="overflow:hidden">
           <img src="homepage/instaFamily.png" class="w3-round" style="max-width:100%" alt="">
+          <h5 class="w3-display-topleft w3-padding-32 w3-text-white w3-container"><br>surviving the Danish winter is easy<br>with my sister and niece next door</h5>
         </div>
       </div>
 
-      <div class="w3-container w3-red Section1 w3-margin" style="display: 'none'">
+      <div class="w3-display-container w3-red Section1 w3-margin" style="display: 'none'">
+        <div class="w3-card-4" style="overflow:hidden">
+          <img src="homepage\intern.jpg" class="w3-round" style="max-width:100%" alt="">
+        </div>
+      </div>
+
+      <div class="w3-display-container w3-red Section1 w3-margin" style="display: 'none'">
         <div class="w3-card-4" style="overflow:hidden">
           <img src="homepage/linkedInQR.jpg" class="w3-round" style="max-width:100%" alt="">
         </div>
       </div>
+
     </div>
     <!-- SECTION2  -->
 
     <div class="w3-container w3-green w3-cell w3-mobile" style="width:60%">
 
+      <!--SECOND SLIDER, controls the content of the Section2 above -->
+      <div id="Demo2" class="slidecontainer w3-container w3-padding-16">
+        <input type="range" min="0" max="100" step="1" class="slider" id="myRange2" oninput="mySlider('Section2')">
+      </div>
+
       <div class="w3-container w3-green Section2">
         <div class=" w3-card w3-white w3-round w3-margin-bottom " style="display: 'none'">
-          <h2 class="w3-text-grey w3-margin w3-padding-16"> <img src="homepage/icebergHat.svg" alt=""> Volunteer Work,
+          <h2 class="w3-text-grey w3-margin w3-padding-16">Volunteer Work,
             Athens GR</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Member of the Organizing Committee / <a href="https://www.athenspride.eu" target="_blank">Athens
@@ -206,7 +227,7 @@ body,h1 {font-family: "Raleway", sans-serif}
 
       <div class="w3-container w3-green Section2">
         <div class=" w3-card w3-white w3-round w3-margin-bottom " style="display: 'none'">
-          <h2 class="w3-text-grey w3-margin  w3-padding-16"> <img src="homepage/icebergHat.svg" alt=""> Retail
+          <h2 class="w3-text-grey w3-margin  w3-padding-16">Retail
             Experience,
             Madrid ES</h2>
           <div class="w3-container">
@@ -238,7 +259,7 @@ body,h1 {font-family: "Raleway", sans-serif}
 
       <div class="w3-container w3-green Section2">
         <div class=" w3-card w3-white w3-round w3-margin-bottom " style="display: 'none'">
-          <h2 class="w3-text-grey w3-margin  w3-padding-16"> <img src="homepage/icebergHat.svg" alt=""> Student Jobs,
+          <h2 class="w3-text-grey w3-margin  w3-padding-16">Student Jobs,
             København
             DK</h2>
           <div class="w3-container">
@@ -261,7 +282,7 @@ body,h1 {font-family: "Raleway", sans-serif}
 
       <div class="w3-container w3-green Section2">
         <div class=" w3-card w3-white w3-round w3-margin-bottom " style="display: 'none'">
-          <h2 class="w3-text-grey w3-margin  w3-padding-16"> <img src="homepage/icebergHat.svg" alt=""> Internship,
+          <h2 class="w3-text-grey w3-margin  w3-padding-16">Internship,
             ProjectLab KEA
             DK</h2>
           <div class="w3-container">
@@ -283,12 +304,18 @@ body,h1 {font-family: "Raleway", sans-serif}
           </div>
         </div>
       </div>
+
     </div>
+
   </div>
 
   <!-- SECTION3  -->
   <div class="w3-cell-row w3-blue">
 
+    <!--THIRD SLIDER, controls the content of the Section3 above -->
+    <div id="Demo3" class="slidecontainer w3-container w3-padding-16">
+      <input type="range" min="0" max="100" step="1" class="slider" id="myRange3" oninput="mySlider('Section3')">
+    </div>
 
     <div class="w3-container w3-card w3-white w3-round w3-margin Section3" style="display: 'none'"><br>
       <img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="Avatar" class="w3-left w3-circle w3-margin-right"
@@ -310,8 +337,9 @@ body,h1 {font-family: "Raleway", sans-serif}
       </div>
       <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/chatNodejs')"" class=" w3-button
         w3-theme-d1 w3-margin-bottom"><i class="fa fa-github"></i> &nbsp;Github</button>
-      <button type="button" onclick="window.open('http://chat.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-terminal"></i>
-          &nbsp;Demo </button>
+      <button type="button" onclick="window.open('http://chat.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i
+          class="fa fa-terminal"></i>
+        &nbsp;Demo </button>
     </div>
 
     <div class="w3-container w3-card w3-white w3-round w3-margin Section3" style="display: 'none'"><br>
@@ -364,20 +392,25 @@ body,h1 {font-family: "Raleway", sans-serif}
     </div>
 
     <div class="w3-container w3-card w3-white w3-round w3-margin Section3" style="display: 'none'"><br>
-      <img src="https://4.bp.blogspot.com/-qgCd0X6Q5jo/WS7l8KhIztI/AAAAAAAABHk/w6t5pFbWdeUUjVoPFTjkvpraw3PDPtijwCLcB/s1600/Unity_Logo.png" alt="Avatar" class="w3-left w3-circle w3-margin-right"
-        style="width:60px">
+      <img src="https://4.bp.blogspot.com/-qgCd0X6Q5jo/WS7l8KhIztI/AAAAAAAABHk/w6t5pFbWdeUUjVoPFTjkvpraw3PDPtijwCLcB/s1600/Unity_Logo.png"
+        alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
       <span class="w3-right w3-opacity">Jun 2018</span>
       <h4>Internship project</h4><br>
       <hr class="w3-clear">
-      <p>In a multidisciplinary team of 2 software developers and 2 multimedia designers, we work in developing an AR solution for this local guided-tours company. 
+      <p>In a multidisciplinary team of 2 software developers and 2 multimedia designers, we work in developing an AR
+        solution for this local guided-tours company.
         Our goal is to "Bring Stories Alive" as well as to add a competitive advantage in the company's SoMe presence.
       </p>
-      <p>Further on, in a team of three developers, we further refined the prototype, and developed an administration system for the app. 
-        The system together with a report of our process was handed as a final project at KEA and my colleagues and I got an excellent evaluation at the exam.
+      <p>Further on, in a team of three developers, we further refined the prototype, and developed an administration
+        system for the app.
+        The system together with a report of our process was handed as a final project at KEA and my colleagues and I
+        got an excellent evaluation at the exam.
       </p>
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Lbq94Ef9qJY?start=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Lbq94Ef9qJY?start=3" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <div class="w3-half">
           <a frameborder="0" data-theme="light" data-layers="1,2,3,4" data-stack-embed="true" href="https://embed.stackshare.io/stacks/embed/8ad84b5f98988d769fc3c329cfe99b" /></a>
           <script async src="https://cdn1.stackshare.io/javascripts/client-code.js" charset="utf-8"></script>
@@ -400,36 +433,31 @@ body,h1 {font-family: "Raleway", sans-serif}
 
   <!-- Here starts the floating footer div with the accordion buttons,
   it should float a few pixels over the bottom of the browser -->
+
   <div class="footer">
 
     <!-- FIRST ACCORDEON button, open/close the #Demo1 div todo: button remains gray after clicking on mobile devices-->
-    <div onclick="myAccordeon('Demo1')" class="w3-btn w3-red w3-block w3-left-align ">My life so far.. in
-      selfies!</div>
+    <!--     <div onclick="myAccordeon('Demo1')" class="w3-btn w3-red w3-block w3-left-align ">My life so far.. in
+      selfies!</div> -->
     <!--FIRST SLIDER, controls the content of the Section1 above -->
-    <div id="Demo1" class="slidecontainer w3-container w3-hide w3-grey w3-padding-16">
+    <!--     <div id="Demo1" class="slidecontainer w3-container w3-hide w3-grey w3-padding-16">
       <input type="range" min="0" max="100" step="1" class="slider" id="myRange1" oninput="mySlider('Section1')">
-    </div>
+    </div> -->
 
     <!-- SECOND ACCORDEON button, open/close the #Demo2 div todo: button remains gray after clicking on mobile devices -->
-    <div onclick="myAccordeon('Demo2')" class="w3-btn w3-green w3-block w3-left-align ">My work &
-      volunteer experience</div>
-    <!--SECOND SLIDER, controls the content of the Section2 above -->
-    <div id="Demo2" class="slidecontainer w3-container w3-hide w3-grey w3-padding-16">
-      <input type="range" min="0" max="100" step="1" class="slider" id="myRange2" oninput="mySlider('Section2')">
-    </div>
+    <!--     <div onclick="myAccordeon('Demo2')" class="w3-btn w3-green w3-block w3-left-align ">My work &
+      volunteer experience</div> -->
+
 
     <!-- THIRD ACCORDEON button, open/close the #Demo3 div todo: button remains gray after clicking on mobile devices -->
-    <div onclick="myAccordeon('Demo3')" class="w3-btn w3-blue w3-block w3-left-align ">My studies,
+    <!--     <div onclick="myAccordeon('Demo3')" class="w3-btn w3-blue w3-block w3-left-align ">My studies,
       project stacks &
       demos</div>
-    <!--THIRD SLIDER, controls the content of the Section3 above -->
-    <div id="Demo3" class="slidecontainer w3-container w3-hide w3-grey w3-padding-16">
-      <input type="range" min="0" max="100" step="1" class="slider" id="myRange3" oninput="mySlider('Section3')">
-    </div>
-  </div>
 
-  <!-- BUFFER FOR BEHIND THE CONTROLS -->
-  <div class="w3-block" style="height:123px"></div>
+  </div>
+ -->
+    <!-- BUFFER FOR BEHIND THE CONTROLS -->
+    <div class="w3-block" style="height:123px"></div>
 
 
 </body>
