--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body,h1 {font-family: "Raleway", sans-serif}
       <div class="w3-display-container w3-red Section1 w3-padding-16" style="display: 'none'">
         <div class="w3-card-4" style="overflow:hidden">
           <img src="homepage/book.jpg" class="w3-round" style="max-width:100%" alt="">
-          <h5 class="w3-display-topright w3-padding-32 w3-text-grey w3-container" style="text-shadow: 2px 2px white;">..gazing upon my model career <br>how the end came before the start...</h5>
+          <h5 class="w3-display-topright w3-padding-32 w3-text-grey w3-container" style="text-shadow: 2px 2px white;">..reflecting upon my model career <br>how the end came before the start...</h5>
         </div>
 
       </div>
