--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ height: 100%;
       <hr class="w3-clear">
       <p>NODEjs app, JWT based authentication, websockets, SQL persistence, DOCKER compose containerization.
       </p>
-      <iframe src="https://chat.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
+      <iframe src="http://chat.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
       <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/chatNodejs')"" class=" w3-button
         w3-theme-d1 w3-margin-bottom"><i class="fa fa-github"></i> &nbsp;Github</button>
       <button type="button" onclick="window.open('https://chat.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i
@@ -322,7 +322,7 @@ height: 100%;
       <p>Angular5 front. JWT based authentication, reactive forms, redux.
         Served from a Spring Boot app. Continuous Intergration with Jenkins github webhooks.
       </p>
-      <iframe src="https://makeyourcv.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
+      <iframe src="http://makeyourcv.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
 
       <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/cvEditorFront')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
           class="fa fa-github"></i> &nbsp;Github</button>
@@ -341,7 +341,7 @@ height: 100%;
         React admin page.
         Click the demo below to browse the admin page.
       </p>
-      <iframe src="https://ar.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
+      <iframe src="http://ar.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
 
       <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/gps-tourist-app')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
           class="fa fa-github"></i> &nbsp;Github</button>
