one can select a main menu option, only the project displays something

--- a/index.html
+++ b/index.html
@@ -351,6 +351,16 @@ height: 100%;
 
     <!--THIRD SLIDER, controls the content of the Section3 above -->
     <div id="Demo3" class="slidecontainer w3-container w3-padding-16" style="display: none">
+        <div class="w3-center">
+            <div class="w3-bar">
+              <a href="#" class="w3-bar-item w3-button">&laquo;</a>
+              <a href="#" class="w3-button">1</a>
+              <a href="#" class="w3-button">2</a>
+              <a href="#" class="w3-button">3</a>
+              <a href="#" class="w3-button">4</a>
+              <a href="#" class="w3-button">&raquo;</a>
+            </div>
+            </div>
       <input type="range" min="0" max="100" step="1" class="slider" id="myRange3" oninput="mySlider('Section3')">
     </div>
   </div>
