removed unused icons/images. changed titles of exp content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <title>STEFWORKS</title>
@@ -110,8 +109,8 @@ height: 100%;
 
 
       <div class="Content2" style="display: none">
-        <h2 class="w3-text-grey w3-margin w3-padding-16">Volunteer Work,
-          Athens GR</h2>
+          <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Athens</h3>
+
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Member of the Organizing Committee / <a href="https://www.athenspride.eu" target="_blank">Athens
                 Pride</a> </b></h5>
@@ -135,9 +134,7 @@ height: 100%;
 
 
       <div class="Content2" style="display: none">
-        <h2 class="w3-text-grey w3-margin  w3-padding-16">Retail
-          Experience,
-          Madrid ES</h2>
+        <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Madrid</h3>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Fashion Advisor / <a href="https://www.uterque.com/dk/" target="_blank">“Uterqüe”
                 Flagship Store (Inditex)</a></b></h5>
@@ -159,9 +156,8 @@ height: 100%;
 
 
       <div class="Content2" style="display: none">
-        <h2 class="w3-text-grey w3-margin  w3-padding-16">Student Jobs,
-          København
-          DK</h2>
+          <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Copenhagen</h3>
+
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Bartender / <a href="https://www.cosybar.dk/" target="_blank">Cosy Bar</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
@@ -181,23 +177,21 @@ height: 100%;
 
 
       <div class="Content2" style="display: none">
-        <h2 class="w3-text-grey w3-margin  w3-padding-16">Internship,
-          ProjectLab KEA
-          DK</h2>
+          <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Copenhagen</h3>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>AR Module / <a href="http://www.koebenhavnerture.dk/" target="_blank">
+          <h5 class="w3-opacity"><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
                 Københavner Ture</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Oct 2018 - Nov 2018</h6>
-          <p>In a multidisciplinary team of 2 software developers and 2 multimedia designers, we developed an AR
+          <p>In a multidisciplinary team, we developed an AR
             solution for this local guided-tours company.
             Our goal is to "Bring Stories Alive" as well as to add a competitive advantage in the company's SoMe
             presence. Received good feedback.
             <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>VR Module / <a href="http://www.chase-race.com/" target="_blank">Chase-Race</a></b></h5>
+          <h5 class="w3-opacity"><b>Intern / <a href="http://www.chase-race.com/" target="_blank">Chase-Race</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2018 - Oct 2018</h6>
-          <p> Working with various product development tecniques, we designed and developed a VR experience for
+          <p>Working with various product development tecniques, we designed and developed a VR experience for
             marketing purposes.
             We went also through an intensive 3-day course on Unity 3D.</p><br>
         </div>
@@ -208,10 +202,10 @@ height: 100%;
         <div class="w3-center">
           <div class="w3-bar">
             <a href="#" class="w3-bar-item w3-button">&laquo;</a>
-            <a href="#" class="w3-button pContent2 w3-blue" onclick="pagination('Content2',1,'w3-blue')">1</a>
-            <a href="#" class="w3-button pContent2" onclick="pagination('Content2',2,'w3-blue')">2</a>
-            <a href="#" class="w3-button pContent2" onclick="pagination('Content2',3,'w3-blue')">3</a>
-            <a href="#" class="w3-button pContent2" onclick="pagination('Content2',4,'w3-blue')">4</a>
+            <a href="#" class="w3-button pContent2 w3-hover-blue w3-blue" onclick="pagination('Content2',1,'w3-blue')">1</a>
+            <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',2,'w3-blue')">2</a>
+            <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',3,'w3-blue')">3</a>
+            <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',4,'w3-blue')">4</a>
             <a href="#" class="w3-button">&raquo;</a>
           </div>
         </div>
@@ -310,11 +304,11 @@ height: 100%;
         <div class="w3-center">
           <div class="w3-bar">
             <a href="#" class="w3-bar-item w3-button">&laquo;</a>
-            <a href="#" class="w3-button pContent3 w3-red" onclick="pagination('Content3',1,'w3-red')">1</a>
-            <a href="#" class="w3-button pContent3" onclick="pagination('Content3',2,'w3-red')">2</a>
-            <a href="#" class="w3-button pContent3" onclick="pagination('Content3',3,'w3-red')">3</a>
-            <a href="#" class="w3-button pContent3" onclick="pagination('Content3',4,'w3-red')">4</a>
-            <a href="#" class="w3-button pContent3" onclick="pagination('Content3',5,'w3-red')">5</a>
+            <a href="#" class="w3-button pContent3 w3-hover-red w3-red" onclick="pagination('Content3',1,'w3-red')">1</a>
+            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',2,'w3-red')">2</a>
+            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',3,'w3-red')">3</a>
+            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',4,'w3-red')">4</a>
+            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',5,'w3-red')">5</a>
             <a href="#" class="w3-button">&raquo;</a>
           </div>
         </div>
